# webShop

./: .env  README.md  docker-compose.yml  pyproject.toml
init_scripts/: init_base.sql
src/main/: Dockerfile  README.md  pyproject.toml
src/main/main/: main.py
src/main/main/manager/: models.py  outboxManager.py
src/order_service/: Dockerfile  README.md  pyproject.toml
src/order_service/order_service/: main.py
src/order_service/order_service/manager/: orderManager.py
src/products_service/: Dockerfile  README.md  pyproject.toml
src/products_service/products_service/: main.py
src/products_service/products_service/manager/: productManager.py
src/users_service/: Dockerfile  README.md  pyproject.toml
src/users_service/users_service/: main.py
src/users_service/users_service/manager/: usersManager.py
