[project]
name = "new-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Zaboev Maxim"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "new_project", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
asyncio = "^3.4.3"
aiokafka = "^0.10.0"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
